--- a/vuecasestudy/package.json
+++ b/vuecasestudy/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "tailwind": "npx tailwindcss -i ./src/assets/css/input.css -o .src/assets/css/output.css --watch",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
@@ -19,8 +20,11 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.13",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7",
     "vue-template-compiler": "^2.6.14"
   }
 }
